<resources>
    <string name="app_name">Product controller</string>
    <string name="scanner">Scanner</string>
    <string name="add_product">Add product</string>
    <string name="languagesListName">Language</string>
    <string name="englishLanguage">English</string>
    <string name="russianLanguage">Russian</string>
    <string name="uzbekLanguage">Uzbek</string>
    <string name="name">Name</string>
    <string name="barcode">Barcode</string>
    <string name="auto_generate">Auto generate</string>
    <string name="count">Count</string>
    <string name="entry_price">Entry price</string>
    <string name="selling_price">Selling price</string>
    <string name="percent">Percent</string>
    <string name="term">Term</string>
    <string name="firm">Firm</string>
    <string name="product_info">Product info</string>
    <string name="please_fill_in_all_the_boxes">Please fill in all the boxes!</string>
    <string name="successfully_saved">Successfully saved!</string>
    <string name="barcode_fill">Please scan the barcode or use generation!</string>
    <string name="view">View</string>
    <string name="no_app_view_excel">No Application available to view Excel</string>
    <string name="entry_date">Entry date</string>
    <string name="no_product_found_this_barcode">No product found with this barcode!</string>
    <string name="barcode_registered">This barcode has been registered!</string>
    <string name="products_list">Products list</string>
    <string name="sort_by_barcode">Sort by barcode</string>
    <string name="sort_by_name">Sort by name</string>
    <string name="edit">Edit</string>
    <string name="remove">Remove</string>
    <string name="successfully_removed">Successfully removed!</string>
    <string name="edit_product">Edit product</string>
    <string name="sort_by_date">Sort by date</string>
    <string name="exporting">Exporting…</string>
    <string name="export_excel">Export excel</string>
    <string name="import_excel">Import excel</string>
    <string name="importing">Importing…</string>
    <string name="file_error">The file is damaged or does not match the type!</string>
    <string name="enter_product_name">Enter product name…</string>
    <string name="this_application_is_blocked">This application is blocked!</string>
    <string name="contact_the_programmer_to_find_out_the_reason_for_blocking">Contact the programmer to find out the reason for the block!</string>
    <string name="copyright" translatable="false">Copyright © 2022 Khakimov Abubakir</string>
    <string name="close_app">Close app</string>
    <string name="cell_type_error">The data type in the file does not match!</string>
</resources>